# Text-summarization-ML-project

./: Summarization_Extraction.sqlite3  manage.py  pyproject.toml
TextSummarizationAndKeywordExtraction/: settings.py  urls.py  wsgi.py
media/files/: 10.1109ICESC48915.2020.9155852_4.txt  coding_task.txt  doc2.txt  example.txt  venkat_SrXkILT.txt
templates/: Documentsummarizationdata.html  ImageExtractionData.html  admin_home.html  admin_login.html  adminbase.html  docsumform.html  imagedataform.html  index.html  textsumform.html  urlsearchsummarization.html  user_home.html  user_login.html  user_register.html
user/: extract_image_data.py  models.py  news.py  summarize.py  summarize_doc.py  views.py
user/migrations/: 0001_initial.py  0002_urlsummarization.py  0003_urlsummarization_url_link.py  0004_documentuploadmodel.py  0005_documentuploadmodel_dno.py  0006_documentsummarizationmodel.py  0007_documentsummarizationmodel_dno.py  0008_imagedataextractionmodel.py  0009_imagedataextractionmodel_user_mail.py  0010_auto_20210520_1108.py
